--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -30,7 +30,7 @@ variables:
     value: $[variables['System.PullRequest.TargetBranch']]
     readonly: True
   - name: usePulumiTask
-    value: 'True'
+    value: 'False'
 
 stages:
   - stage: validateBranch
@@ -60,20 +60,18 @@ stages:
                   architecture: x64
               - script: |
                   brew install pulumi azure-cli
-                  python3 -m venv venv
-                  source venv/bin/activate
-                  pip install -r requirements.txt
-                  # unfortunatelly SP is not working as login method :-(
-                  # az login --service-principal -u '$(SPAPPID)' -p '$(SPSECRET)' --tenant '$(SPTENANT)'
-                  az login --use-device-code
+                  # python3 -m venv venv
+                  # source venv/bin/activate
+                  # pip install -r requirements.txt
+                  az login -u '$(AZPULUMIUSER)' -p '$(AZPULUMIPW)' --tenant '$(AZPULUMITENANT)'
                   pulumi stack select dev
-                  pulumi up --yes
+                  pulumi preview
                 env:
                   PULUMI_ACCESS_TOKEN: $(pulumiToken)
-                  SPAPPID: $(SpAppId)
-                  SPSECRET: $(SpSecret)
-                  SPTENANT: $(SpTenant)
-                workingDirectory: 'src/quickstart'
+                  AZPULUMIUSER: $(SpAppId)
+                  AZPULUMIPW: $(SpSecret)
+                  AZPULUMITENANT: $(SpTenant)
+                workingDirectory: 'src/quickstart/'
                 displayName: No Pulumi Addon - script
 
           - ${{ if eq(variables.usePulumiTask, 'True') }}:
@@ -88,6 +86,9 @@ stages:
                   stack: 'dev'
                 env:
                   PULUMI_ACCESS_TOKEN: $(pulumiToken)
+
+          - ${{ if eq(variables.usePulumiTask, 'True') }}:
+              - task:
 
   # - stage: MkDocs
   #   dependsOn:
