fix template build mkdocs

--- a/azure-pipelines/jobs/steps/build_mkdocs.yml
+++ b/azure-pipelines/jobs/steps/build_mkdocs.yml
@@ -3,7 +3,7 @@
 parameters:
   - name: PYTHON_VERSION
     type: string
-    default: ${{ variables.pythonVersion }}
+    default: $(pythonVersion)
 
 steps:
   - task: UsePythonVersion@0
