--- a/azure-pipelines/jobs/steps/publish_mkdocs.yml
+++ b/azure-pipelines/jobs/steps/publish_mkdocs.yml
@@ -1,6 +1,3 @@
 steps:
-  - task: Bash@3
-    displayName: 'Deploy to GitHub-Pages'
-    inputs:
-      targetType: 'inline'
-      script: 'mkdocs gh-deploy --force --clean'
+  - script: mkdocs gh-deploy --force
+    displayName: Deploy to GitHub-Pages
