--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
-site_name: Azure-DevOps with GitHub-Repo
-site_url: !ENV [SITE_URL, 'https://Mauwii.github.io/django_devops/']
-dev_addr: 127.0.0.1:8080
+site_name: 'Azure-DevOps with GitHub-Repo'
+site_url: 'https://Mauwii.github.io/django_devops/'
+dev_addr: '127.0.0.1:8000'
 site_author: Matthias Wild
 site_description: >-
   Welcome to my Playground which I created to find out more about the
