update job and steps template mkdocs and variables

--- a/azure-pipelines/jobs/mkdocs-material.yml
+++ b/azure-pipelines/jobs/mkdocs-material.yml
@@ -7,4 +7,5 @@ jobs:
           submodule: src/mkdocs-material
       - template: steps/build_mkdocs.yml
         parameters:
-          publish: $(publish_docs)
+          site_dir: 'site'
+          deploy: ${{ variables.deploy_mkdocs }}
