fix expression in mkdocs-material job template

--- a/azure-pipelines/jobs/mkdocs-material.yml
+++ b/azure-pipelines/jobs/mkdocs-material.yml
@@ -15,5 +15,5 @@ jobs:
           submodule: 'src/mkdocs-material'
       - template: steps/build_mkdocs.yml
         parameters:
-          site_dir: '${{ parameter.mkdocs_site_dir }}'
+          site_dir: '${{ parameters.mkdocs_site_dir }}'
           deploy: '${{ parameters.mkdocs_deploy }}'
