--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -86,9 +86,9 @@ stages:
   - stage: MkDocs
     dependsOn: WebApp
     variables:
-      - ${{ if eq(variables.isMain, 'true') }}:
+      - ${{ if eq(variables.isMain, 'True') }}:
           - template: azure-pipelines/variables/main.yml
-      - ${{ if eq(variables.isStable, 'true') }}:
+      - ${{ if eq(variables.isStable, 'True') }}:
           - template: azure-pipelines/variables/stable.yml
     jobs:
       - template: azure-pipelines/jobs/mkdocs-material.yml
