Issue/update documentation (#63)
* update docs workflow repository

* update editorconfig

* update pipeline template to build mkdocs

* add requirements for mkdocs-material

* add template to publish mkdocs

* update docs workflow repository

* fix template build mkdocs

* update docs workflow repository

* update docs ToDo

* add templates for mkdocs build and publish

* add variable template

* fix job name

* add checkout of mkdocs submodule

* update docs todo

* remove todo folder, add todo to docs folder

* update mkdocs.yml

* update pipelines, templates and variables

* fix template build mkdocs

* update job and steps template mkdocs and variables

* fix mkdocs parameters, variables and templates

* add parameters to mkdocs template
in azure-pipelines

* fix mkdocs template parameters in azure-pipelines

* fix expression in mkdocs-material job template

* fix parameter names in mkdocs-material job

* remove default parameters mkdocs-material

* add default and branch dependened variables

* fix caseing for consitency

* fix headers

* update docs, fix headers

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,21 +26,10 @@ variables:
   - name: isPullRequest
     value: $[eq(variables['Build.Reason'], 'PullRequest')]
     readonly: true
-  - name: pythonVersion
-    value: '3.9'
-    readonly: true
-  - name: resourceGroupName
-    value: 'django_gh'
-    readonly: true
-  - name: location
-    value: 'westeurope'
-    readonly: true
-  - name: azureSubscription
-    value: 'django_gh'
-    readonly: true
-  - name: vmImageName
-    value: 'ubuntu-latest'
-    readonly: true
+  # - name: sourceBranchName
+  #   value: $[variables['Build.SourceBranchName']]
+  #   readonly: true
+  - template: azure-pipelines/variables/default.yml
 
 pool:
   vmImage: $(vmImageName)
@@ -95,24 +84,14 @@ stages:
                     - template: azure-pipelines/jobs/steps/deploy_webapp.yml
 
   - stage: MkDocs
-    displayName: MkDocs-Material
     dependsOn: WebApp
-    condition: in(dependencies.WebApp.result, 'Succeeded')
-    jobs:
-      - job: buildMkDocs
-        displayName: Build MkDocs-Material
-        dependsOn:
-        condition: eq(variables.isMain, 'False')
-        steps:
-          - template: azure-pipelines/jobs/steps/build_mkdocs.yml
+    variables:
       - ${{ if eq(variables.isMain, 'True') }}:
-          - job: deployMkDocs
-            displayName: Deploy MkDocs-Material
-            dependsOn:
-            steps:
-              - template: azure-pipelines/jobs/steps/build_mkdocs.yml
-              - task: Bash@3
-                displayName: Deploy to GitHub-Pages
-                inputs:
-                  targetType: 'inline'
-                  script: 'mkdocs gh-deploy --force --clean'
+          - template: azure-pipelines/variables/main.yml
+      - ${{ if eq(variables.isStable, 'True') }}:
+          - template: azure-pipelines/variables/stable.yml
+    jobs:
+      - template: azure-pipelines/jobs/mkdocs-material.yml
+        parameters:
+          mkdocs_site_dir: ${{ variables.mkdocs_site_dir }}
+          mkdocs_deploy: ${{ variables.mkdocs_deploy }}
