--- a/azure-pipelines/jobs/steps/build_mkdocs.yml
+++ b/azure-pipelines/jobs/steps/build_mkdocs.yml
@@ -1,34 +1,35 @@
 # Pipeline Template to build MkDocs
-
 parameters:
-  # Python Version to use for building mkdocs-material
-  - name: PYTHON_VERSION
+  - name: pythonVersion
     type: string
     default: $(pythonVersion)
+  - name: mkdocs_site_dir
+    type: string
+    default: 'site'
+  - name: mkdocs_deploy
+    type: boolean
+    default: false
 
 steps:
-  - template: checkout_submodules.yml
-    parameters:
-      submodule: 'src/mkdocs-material'
-
   - task: UsePythonVersion@0
-    displayName: 'Use Python ${{ parameters.PYTHON_VERSION }}'
+    displayName: 'Use Python ${{ parameters.pythonVersion }}'
     inputs:
-      versionSpec: ${{ parameters.PYTHON_VERSION }}
+      versionSpec: '${{ parameters.pythonVersion }}'
       addToPath: true
-      architecture: 'x64'
+      architecture: x64
 
-  - task: Bash@3
-    displayName: 'Install mkdocs-material'
-    inputs:
-      targetType: 'inline'
-      script: |
-        pip install --upgrade pip wheel setuptools
-        pip install -e src/mkdocs-material
-        pip install mkdocs-git-revision-date-plugin
+  - script: pip install --upgrade pip wheel setuptools
+    displayName: update tools
 
-  - task: Bash@3
-    displayName: 'Build MkDocs'
-    inputs:
-      targetType: 'inline'
-      script: 'mkdocs build'
+  - script: pip install -e src/mkdocs-material
+    displayName: install MkDocs-Material
+
+  - script: pip install -r src/requirements-mkdocs-material.txt
+    displayName: install requirements
+
+  - script: mkdocs build --site-dir ${{ parameters.mkdocs_site_dir }} --verbose
+    displayName: build docs
+
+  - ${{ if eq(parameters.mkdocs_deploy, 'true') }}:
+      - script: mkdocs gh-deploy --force --site-dir ${{ parameters.mkdocs_site_dir }} --verbose
+        displayName: deploy to GitHub-Pages
