--- a/azure-pipelines/jobs/steps/build_mkdocs.yml
+++ b/azure-pipelines/jobs/steps/build_mkdocs.yml
@@ -2,13 +2,10 @@
 parameters:
   - name: pythonVersion
     type: string
-    default: $(pythonVersion)
-  - name: mkdocs_site_dir
+  - name: mkdocsSiteDir
     type: string
-    default: 'site'
-  - name: mkdocs_deploy
+  - name: mkdocsDeploy
     type: boolean
-    default: false
 
 steps:
   - task: UsePythonVersion@0
@@ -27,9 +24,9 @@ steps:
   - script: pip install -r src/requirements-mkdocs-material.txt
     displayName: install requirements
 
-  - script: mkdocs build --site-dir ${{ parameters.mkdocs_site_dir }} --verbose
+  - script: mkdocs build --site-dir ${{ parameters.mkdocsSiteDir }} --verbose
     displayName: build docs
 
-  - ${{ if eq(parameters.mkdocs_deploy, 'true') }}:
-      - script: mkdocs gh-deploy --force --site-dir ${{ parameters.mkdocs_site_dir }} --verbose
+  - ${{ if eq(parameters.mkdocsDeploy, 'True') }}:
+      - script: mkdocs gh-deploy --force --site-dir ${{ parameters.mkdocsSiteDir }} --verbose
         displayName: deploy to GitHub-Pages
