--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,8 +20,8 @@ variables:
   - name: isMain
     value: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
     readonly: true
-  - name: isProduction
-    value: $[eq(variables['Build.SourceBranch'], 'refs/heads/production')]
+  - name: isStable
+    value: $[eq(variables['Build.SourceBranch'], 'refs/heads/stable')]
     readonly: true
   - name: isPullRequest
     value: $[eq(variables['Build.Reason'], 'PullRequest')]
@@ -86,12 +86,13 @@ stages:
   - stage: MkDocs
     dependsOn: WebApp
     variables:
-      - ${{ if eq(variables.isMain, 'True') }}:
-          - template: azure-pipelines/variables/main.yml
-      - ${{ if eq(variables.isStable, 'True') }}:
-          - template: azure-pipelines/variables/stable.yml
+    ${{ if eq(variables.isMain, 'True') }}:
+      - template: azure-pipelines/variables/main.yml
+    ${{ if eq(variables.isStable, 'True') }}:
+      variables:
+        - template: azure-pipelines/variables/stable.yml
     jobs:
       - template: azure-pipelines/jobs/mkdocs-material.yml
         parameters:
-          mkdocs_site_dir: ${{ variables.mkdocs_site_dir }}
-          mkdocs_deploy: ${{ variables.mkdocs_deploy }}
+          mkdocsSiteDir: ${{ variables.mkdocsSiteDir }}
+          mkdocsDeploy: ${{ variables.mkdocsDeploy }}
