--- a/azure-pipelines/variables/main.yml
+++ b/azure-pipelines/variables/main.yml
@@ -1,5 +1,5 @@
 variables:
-  - name: mkdocs_deploy
-    value: 'true'
-  - name: mkdocs_site_dir
+  - name: mkdocsDeploy
+    value: 'True'
+  - name: mkdocsSiteDir
     value: 'site'
