add parameter to template call

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,5 +94,6 @@ stages:
     jobs:
       - template: azure-pipelines/jobs/mkdocs-material.yml
         parameters:
-          mkdocsSiteDir: ${{ variables.mkdocsSiteDir }}
-          mkdocsDeploy: ${{ variables.mkdocsDeploy }}
+          pythonVersion: '${{ variables.pythonVersion }}'
+          mkdocsSiteDir: '${{ variables.mkdocsSiteDir }}'
+          mkdocsDeploy: '${{ variables.mkdocsDeploy }}'
