add github-markdown-preview extension

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "ms-azure-devops.azure-pipelines",
     "redhat.vscode-yaml",
     "DavidAnson.vscode-markdownlint",
-    "yzhang.markdown-all-in-one"
+    "yzhang.markdown-all-in-one",
+    "bierner.github-markdown-preview"
   ]
 }
