- rename PYTHON_VERSION(S) to pythonVersion(s) - add branch dependend variables to   - deploy bicep   - build webapp - remove publishBuildArtifact parameter in build_webapp - rename mkdocs_site_dir to mkdocsSiteDir - rename mkdocs_deploy to mkdocsDeploy

--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -73,7 +73,7 @@ stages:
 
           - template: jobs/steps/python_django_test_experimental.yml
             parameters:
-              PYTHON_VERSIONS:
+              pythonVersions:
                 - '3.10'
                 - '3.9'
                 - '3.8'
