--- a/azure-pipelines/jobs/steps/python_django_export_projectroot.yml
+++ b/azure-pipelines/jobs/steps/python_django_export_projectroot.yml
@@ -1,9 +1,9 @@
 ## Search all subdirectories for 'manage.py' and create projectRoot variable
 
 parameters:
-  - name: PYTHON_VERSION
+  - name: pythonVersion
     type: string
-    default: $(pythonVersion)
+    default: '3.9'
 
 steps:
   - template: checkout_submodules.yml
@@ -11,9 +11,9 @@ steps:
       submodule: 'src/webapp'
 
   - task: UsePythonVersion@0
-    displayName: Use Python version ${{ parameters.PYTHON_VERSION }}
+    displayName: Use Python version ${{ parameters.pythonVersion }}
     inputs:
-      versionSpec: ${{ parameters.PYTHON_VERSION }}
+      versionSpec: ${{ parameters.pythonVersion }}
       architecture: x64
 
   - task: PythonScript@0
